ATLAS-3180: integration test for export data